@@ -1,10 +1,13 @@
-function t_ok(cond, msg)
+function ok = t_ok(cond, msg)
 %T_OK  Tests if a condition is true.
 %   T_OK(EXPR, MSG) increments the global test count and if the EXPR
 %   is true it increments the passed tests count, otherwise increments
 %   the failed tests count. Prints 'ok' or 'not ok' followed by the
 %   MSG, unless the global variable t_quiet is true. Intended to be
 %   called between calls to T_BEGIN and T_END.
+%
+%   Optionally returns a true or false value indicating whether or
+%   not the test succeeded.
 %
 %   Example:
 %       quiet = 0;
@@ -19,7 +22,7 @@ function t_ok(cond, msg)
 %   MATPOWER
 %   $Id$
 %   by Ray Zimmerman, PSERC Cornell
-%   Copyright (c) 2004-2010 by Power System Engineering Research Center (PSERC)
+%   Copyright (c) 2004-2014 by Power System Engineering Research Center (PSERC)
 %
 %   This file is part of MATPOWER.
 %   See http://www.pserc.cornell.edu/matpower/ for more info.
@@ -67,3 +70,6 @@ if ~t_quiet
     fprintf('ok %d%s\n', t_counter, msg);
 end
 t_counter = t_counter + 1;
+if nargout
+    ok = cond;
+end
